--- a/CleanUI/src/main/res/values/styles_top_calendar.xml
+++ b/CleanUI/src/main/res/values/styles_top_calendar.xml
@@ -23,7 +23,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:gravity">center</item>
     </style>
@@ -43,8 +43,8 @@
     <style name="clean_ui_TopCalendarNotification" parent="@android:style/TextAppearance">
         <item name="android:layout_width">4dp</item>
         <item name="android:layout_height">4dp</item>
-        <item name="android:drawable">@drawable/clean_ui_circle</item>
-        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:background">@drawable/clean_ui_circle</item>
+        <item name="android:layout_marginTop">4dp</item>
     </style>
 
     <style name="clean_ui_TopCalendarNoSelectedMonth" parent="@android:style/TextAppearance">
