--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/app_colorPrimary</item>
         <item name="colorPrimaryDark">@color/app_colorPrimaryDark</item>
         <item name="colorAccent">@color/app_colorAccent</item>
+        <item name="android:spotShadowAlpha">0.32</item>
+        <item name="android:ambientShadowAlpha">0</item>
     </style>
 
 </resources>
