--- a/CleanUI/src/main/res/layout/clean_ui_chat_item_message_file_left.xml
+++ b/CleanUI/src/main/res/layout/clean_ui_chat_item_message_file_left.xml
@@ -17,17 +17,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        android:paddingBottom="40dp"
         android:clipToPadding="false"
         >
 
         <ImageView
             android:id="@+id/clean_ui_chat_ivOptions"
             style="@style/clean_ui_chat_ChatOptionsIcon"
-            android:src="@drawable/clean_ui_ic_chat_options"
             android:layout_marginBottom="6dp"
 
-            app:layout_constraintEnd_toEndOf="@+id/clean_ui_chat_tvMessage"
-            app:layout_constraintBottom_toTopOf="@+id/clean_ui_chat_tvMessage"
+            app:layout_constraintEnd_toEndOf="@+id/clean_ui_chat_clMessageBg"
+            app:layout_constraintBottom_toTopOf="@+id/clean_ui_chat_clMessageBg"
             />
 
         <TextView
@@ -37,20 +37,63 @@
             android:text="13:43"
 
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/clean_ui_chat_tvMessage"
+            app:layout_constraintStart_toStartOf="@+id/clean_ui_chat_clMessageBg"
             />
 
-        <TextView
-            android:id="@+id/clean_ui_chat_tvMessage"
-            style="@style/clean_ui_chat_MessageLeft"
-
-            tools:text="eneris. salvus huvus hus"
+        <LinearLayout
+            android:id="@+id/clean_ui_chat_clMessageBg"
+            style="@style/clean_ui_chat_FileMessageLeftBg"
+            tools:background="@drawable/clean_ui_chat_bubble_left_bg"
             android:layout_marginTop="6dp"
+            android:orientation="horizontal"
+
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clean_ui_chat_tvTime"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="40dp"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/clean_ui_chat_tvTime"
+            >
+
+
+            <ImageView
+                android:id="@+id/clean_ui_chat_ivFile"
+                style="@style/clean_ui_chat_FileMessageLeftFileICon"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:id="@+id/clean_ui_chat_tvMessage"
+                    style="@style/clean_ui_chat_MessageLeftText"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+
+                    tools:text="logo-final.svg"
+                    android:layout_marginStart="10dp"
+                    />
+
+                <TextView
+                    android:id="@+id/clean_ui_chat_subtextMessage"
+                    style="@style/clean_ui_chat_MessageLeftTextDark"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+
+                    android:text="21.2 kb"
+                    android:layout_marginStart="10dp"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
